# cairs

./: .gitignore  Cargo.toml
.cargo/: config.toml
mistralrs-chat/: Cargo.toml  README.md
mistralrs-chat/examples/: character_card.rs  chat.rs  model_confs.rs
mistralrs-chat/src/: logic.rs  main.rs
mistralrs-quant/src/blockwise_fp8/: ffi.rs
mistralrs-quant/src/gptq/: marlin_ffi.rs
