[package]
name = "mistralrs-chat"
readme = "README.md"
authors = ["Ossi Rytkonen"]
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mistralrs-core = { version = "0.5.0", path = "../mistralrs-core" }
mistralrs = { version = "0.5.0", path = "../mistralrs" }
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
clap.workspace = true
indexmap.workspace = true
either.workspace = true
tokio-util = "0.7.14"
ctrlc = "3.4.5"
inquire = "0.7.5"
confy = "0.6.1"

[features]
cuda = ["mistralrs-core/cuda"]
cudnn = ["mistralrs-core/cudnn"]
